- put everything under Lucinda\MVC\STDOUT
- Application:getXML -> Application:getTag(NAME)
- Application:setAttribute/getAttribute -> Application:attributes()
- Application::getRoutes/getRouteInfo/hasRoute -> Application:routes()
- Application::getFormats/getFormatInfo/hasFormat -> Application:formats()
- Application:getWrappersPath -> Application:getViewResolversPath
- Format:getWrapper -> Format:getViewResolver
- Request:getParameter/getParameters -> Request:parameters()
- Request:getHeader/getHeaders -> Request:headers()
- Request:setAttribute/getAttribute -> Request:attributes()
- RequestURI:getParameter/getParameters -> RequestURI:parameters()
- Response:setAttribute/getAttribute -> Response:attributes()
- Response:Wrapper -> Response:ViewResolver
- ApplicationException -> XMLException

- moved RestController & HtmlResolver to framework
- framework: removed BypassWrapper, renamed JsonWrapper to JsonResolver
- framework: renamed application.wrappers >> application.resolvers

TODO: create namespaces relative to subfolders