@@ -1,6 +1,6 @@
 <?php
 namespace Lucinda\MVC\STDOUT;
 /**
- * Exception thrown when ServletsAPI fails to locate a format that matches requested extension.
+ * Exception thrown when ServletsAPI fails to locate a format that matches requested name (extension).
 */
 class FormatNotFoundException extends \Exception {}
